--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,12 @@
-html, body, #root
-{
+html,
+body,
+#root {
   width: 100%;
   height: 100%;
   -webkit-text-size-adjust: none;
 }
 
-#root
-{
+#root {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,26 +14,29 @@ html, body, #root
   background: none;
 }
 
-#root > .loader
-{
+#root > .loader {
   width: 192px;
   font-size: 32px;
   text-align: center;
 }
 
-img
-{
+img {
   max-width: 100%;
 }
 
 @media only screen and (max-width: 960px) {
-  .github-fork-ribbon
-  {
+  .github-fork-ribbon {
     display: none;
   }
 
-  #root
-  {
+  #root {
     background: none !important;
   }
+}
+
+h1 {
+  font-size: 24px;
+}
+h2 {
+  font-size: 20px;
 }
